--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -74,22 +74,23 @@
                 boardType: $('#board_type option:selected').val()
             });
             $.ajax({
-                       url: "http://localhost:8081/api/boards",
-                       type: "POST",
-                       data: jsonData,
-                       contentType: "application/json",
-                       headers: {
-                           "Authorization": "Basic " + btoa("havi" + ":" + "test")
-                       },
-                       dataType: "json",
-                           success: function () {
-                               alert('저장 성공!');
-                               location.href = '/board/list';
-                       },
-                       error: function () {
-                           alert('저장 실패!');
-                       }
-                   });
+               url: "http://localhost:8081/api/boards",
+               type: "POST",
+               data: jsonData,
+               contentType: "application/json",
+               headers: {
+                   "Authorization": "Basic " + btoa("havi" + ":" + "test")
+               },
+               dataType: "json",
+                   success: function () {
+                       alert('저장 성공!');
+                       location.href = '/board/list';
+               },
+                error: function(xhr, status, error){
+                    var errorMessage = xhr.status + ': ' + xhr.statusText
+                    alert('Error - ' + errorMessage);
+                }
+           });
         });
     </script>
     <script th:if="${board?.idx}">
